--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Chat Zebra</title>
     <link href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/style.css" rel="stylesheet" />
     <style>
+           * { margin: 0; padding: 0; box-sizing: border-box; }
+    html, body { width: 100%; height: 100%; font-family: Arial, sans-serif; overflow: hidden; background: #ffffff; }
+    
+    /* 🎨 PERSONALIZACIÓN DEL CHAT N8N - COLOR NEGRO EN HEADER */
+    :root {
+        --chat--color-dark: #000000 !important;
+        --chat--color-white: #ffffff !important;
+    }
         * { margin: 0; padding: 0; box-sizing: border-box; }
         html, body { width: 100%; height: 100%; font-family: Arial, sans-serif; overflow: hidden; background: #ffffff; }
         .main-container { display: flex; flex-direction: column; width: 100%; height: 100vh; }
