--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     metadata: { sessionId: sessionId },
                     showWelcomeScreen: false,
                     defaultLanguage: 'es',
-                    i18n: { es: { title: 'Chat Zebra', subtitle: 'Conversación con memoria persistente', footer: '', getStarted: 'Iniciar conversación', inputPlaceholder: 'Escribe tu mensaje...' } }
+                    i18n: { es: { title: 'Prueba la IA', subtitle: 'Prueba todo lo que se te ocurra', footer: '', getStarted: 'Iniciar conversación', inputPlaceholder: 'Escribe tu mensaje...' } }
                 });
                 console.log('✅ Chat creado exitosamente con sessionId:', sessionId);
                 setTimeout(capturarMensajesDelChat, 2000);
