--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
         // 🔐 VERIFICAR SI ES ADMINISTRADOR (usando username)
         const username = sessionStorage.getItem('zebra_user');
-        const isAdmin = (username === 'admin');
+        const isAdmin = (username === 'Administrador');
         
         console.log('🔍 Username detectado:', username);
         console.log('🔍 ¿Es admin?:', isAdmin);
