--- a/login.html
+++ b/login.html
@@ -137,7 +137,7 @@
 <body>
     <div class="login-container">
         <div class="logo">
-            <img src="Logo_Zebra_Blanco.png" alt="Zebra" style="filter: invert(1);">
+            <img src="Logo_Zebra_Blanco2.png" alt="Zebra" style="filter: invert(1);">
             <h1>Chat Zebra</h1>
             <p>Panel de Ajustes de IA</p>
         </div>
