--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <button id="btnLogout" class="btn-logout">Cerrar Sesión</button>
             </div>
             <div class="logo-container">
-                <img src="Logo_Zebra_Blanco2.png" alt="Zebra">
+                <img src="Logo_Zebra_Blanco.png" alt="Zebra">
                 <h1>Panel de Ajustes de IA</h1>
             </div>
             <div class="instructions-full">
